# digital-brain

./: .gitignore  README.md
docs/: plan-v0-mvp.md  plan-v1-full.md
docs/superpowers/plans/: 2026-05-23-digital-brain.md
docs/superpowers/specs/: 2026-05-23-digital-brain-design.md
helpers/: .coverage  config.py  index_writer.py  pyproject.toml
helpers/src/digital_brain_helpers/: cli.py  config.py  frontmatter.py  index_writer.py  install_helpers.py  obsidian_register.py  session_start.py
helpers/tests/: conftest.py  test_auto_refresh.py  test_cli.py  test_config.py  test_frontmatter.py  test_index_writer.py  test_install_helpers.py  test_obsidian_register.py  test_session_start.py
hooks/: auto_refresh.py  install.sh  post-commit  session_start.sh  stale_check.sh
skills/load-brain/: SKILL.md
skills/load-digital-brain/: SKILL.md
skills/refresh-brain/: SKILL.md
skills/refresh-digital-brain/: SKILL.md
