[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-brain-helpers"
version = "0.1.0"
description = "Helpers for digital-brain Claude Code skills"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "graphifyy>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
digital-brain = "digital_brain_helpers.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=digital_brain_helpers --cov-fail-under=80"
